--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Security Example</title>
 </head>
 <body>
-Logged in user: <b th:text="${currentUser}" />
+Logged in user: <b th:text="${currentUser}"/>
 <form th:action="@{/logout}" th:method="post">
     <input type="submit" value="Logout">
 </form>
@@ -17,16 +18,18 @@ Logged in user: <b th:text="${currentUser}" />
         <th>Username</th>
         <th>Email</th>
         <th>Authorities</th>
-        <th colspan="2"> Operations </th>
+        <th colspan="2"> Operations</th>
     </tr>
     <th:block th:each="user : ${userList}">
         <tr>
             <td th:text="${user.id}"></td>
             <td th:text="${user.username}"></td>
             <td th:text="${user.email}"></td>
-            <td><th:block th:each="role : ${user.roles}">
-                <div th:text="${role.name}" />
-            </th:block> </td>
+            <td>
+                <th:block th:each="role : ${user.roles}">
+                    <div th:text="${role.name}"/>
+                </th:block>
+            </td>
             <td>
                 <form th:action="@{admin/updateUser/{id}(id=${user.id})}" th:method="get">
                     <input type="submit" value="Update">
