--- a/src/main/resources/templates/updateUserForm.html
+++ b/src/main/resources/templates/updateUserForm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Security Example</title>
 </head>
@@ -8,13 +9,13 @@
 <form th:action="@{/admin/update}" th:object="${user}" method="post">
     <input type="hidden" th:field="*{id}"/>
     <label th:name="username">Username:</label>
-    <input type="text" th:name="username" th:field="*{username}" placeholder="enter new username"/>
+    <input type="text" th:name="username" th:field="*{username}"/>
     <br>
     <label th:name="password">Password:</label>
-    <input type="text" th:name="password" th:field="*{password}" placeholder="enter new password"/>
+    <input type="text" th:name="password" th:field="*{password}" placeholder="Enter the old or new password" required/>
     <br>
     <label th:name="email">Email:</label>
-    <input type="text" th:name="email" th:field="*{email}"placeholder="enter new email"/>
+    <input type="text" th:name="email" th:field="*{email}"/>
     <br>
     <label>Roles:</label>
     <div th:each="role : ${roleList}">
