--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Security Example</title>
 </head>
 <body>
-Logged in user: <b th:text="${currentUser}" />
+Logged in user: <b th:text="${currentUser}"/>
 <form th:action="@{/logout}" th:method="post">
     <input type="submit" value="Logout">
 </form>
@@ -19,9 +20,11 @@ Logged in user: <b th:text="${currentUser}" />
     <tr>
         <td th:text="${user.username}"></td>
         <td th:text="${user.email}"></td>
-        <td><th:block th:each="role :${user.roles}">
-            <p th:text="${role.name}"></p>
-        </th:block></td>
+        <td>
+            <th:block th:each="role :${user.roles}">
+                <p th:text="${role.name}"></p>
+            </th:block>
+        </td>
 
     </tr>
 </table>
